# obscura

./: Cargo.toml
crates/obscura-browser/: Cargo.toml
crates/obscura-browser/src/: context.rs  lifecycle.rs  page.rs
crates/obscura-cdp/src/: dispatch.rs  lib.rs  server.rs
crates/obscura-cdp/src/domains/: accessibility.rs  fetch.rs  input.rs  page.rs  runtime.rs  target.rs
crates/obscura-cli/src/: main.rs
crates/obscura-dom/src/: selector.rs
crates/obscura-js/src/: module_loader.rs  ops.rs  runtime.rs
crates/obscura-net/src/: client.rs  cookies.rs  robots.rs
crates/obscura-render/: Cargo.toml
crates/obscura-render/src/: layout.rs  lib.rs  style.rs
